prevent layout shifting

--- a/blocks/v2-inpage-navigation/v2-inpage-navigation.css
+++ b/blocks/v2-inpage-navigation/v2-inpage-navigation.css
@@ -3,9 +3,11 @@
 }
 
 .v2-inpage-navigation-wrapper {
-  box-shadow: 0 4px 24px 0 rgb(0 0 0 / 16%);
   background-color: var(--c-primary-white);
+  box-shadow: 0 4px 24px 0 rgb(0 0 0 / 16%);
+  height: auto !important;
   left: 0;
+  overflow: unset !important;
   position: sticky;
   top: var(--nav-height);
   width: 100%;
